plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.vacom'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

repositories {
    mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.hibernate:hibernate-core:6.6.8.Final'
	implementation 'org.projectlombok:lombok:1.18.24'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
	implementation 'org.hibernate.validator:hibernate-validator'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
	implementation 'jakarta.validation:jakarta.validation-api'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.10'
}

tasks.named('test') {
    useJUnitPlatform()
}

springBoot {
    mainClass = 'com.vacom.accounting_system.AccountingSystemApplication'
}